// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiButtonGroup button props buttonSize compressed is rendered for multi 1`] = `
<fieldset
  class="euiButtonGroup euiButtonGroup--compressed euiButtonGroup--text"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--small testClass1 testClass2 css-dbzl5z-empty-text-EuiButtonGroupButton"
      data-test-subj="test subject string"
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--small  css-dbzl5z-empty-text-EuiButtonGroupButton"
      data-test-subj="button01"
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--small  css-1ra7a0c-empty-disabled-EuiButtonGroupButton"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props buttonSize compressed is rendered for single 1`] = `
<fieldset
  class="euiButtonGroup euiButtonGroup--compressed euiButtonGroup--text"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons"
  >
    <label
      aria-label="aria-label"
      class="euiButtonGroupButton euiButtonGroupButton--small testClass1 testClass2 css-dbzl5z-empty-text-EuiButtonGroupButton"
      data-test-subj="test subject string"
      for="generated-id"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          <input
            class="euiScreenReaderOnly"
            data-test-subj="button00"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option one
        </span>
      </span>
    </label>
    <label
      class="euiButtonGroupButton euiButtonGroupButton--small  css-dbzl5z-empty-text-EuiButtonGroupButton"
      for="generated-id"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          <input
            class="euiScreenReaderOnly"
            data-test-subj="button01"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option two
        </span>
      </span>
    </label>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--small  css-1ra7a0c-empty-disabled-EuiButtonGroupButton"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props buttonSize m is rendered for multi 1`] = `
<fieldset
  class="euiButtonGroup euiButtonGroup--medium euiButtonGroup--text"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton testClass1 testClass2 css-1m5p0sb-base-text-EuiButtonGroupButton"
      data-test-subj="test subject string"
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton  css-1m5p0sb-base-text-EuiButtonGroupButton"
      data-test-subj="button01"
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton  css-10kqeyc-base-disabled-EuiButtonGroupButton"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props buttonSize m is rendered for single 1`] = `
<fieldset
  class="euiButtonGroup euiButtonGroup--medium euiButtonGroup--text"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons"
  >
    <label
      aria-label="aria-label"
      class="euiButtonGroupButton testClass1 testClass2 css-1m5p0sb-base-text-EuiButtonGroupButton"
      data-test-subj="test subject string"
      for="generated-id"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          <input
            class="euiScreenReaderOnly"
            data-test-subj="button00"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option one
        </span>
      </span>
    </label>
    <label
      class="euiButtonGroupButton  css-1m5p0sb-base-text-EuiButtonGroupButton"
      for="generated-id"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          <input
            class="euiScreenReaderOnly"
            data-test-subj="button01"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option two
        </span>
      </span>
    </label>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton  css-10kqeyc-base-disabled-EuiButtonGroupButton"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props buttonSize s is rendered for multi 1`] = `
<fieldset
  class="euiButtonGroup euiButtonGroup--small euiButtonGroup--text"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--small testClass1 testClass2 css-1m5p0sb-base-text-EuiButtonGroupButton"
      data-test-subj="test subject string"
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--small  css-1m5p0sb-base-text-EuiButtonGroupButton"
      data-test-subj="button01"
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--small  css-10kqeyc-base-disabled-EuiButtonGroupButton"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props buttonSize s is rendered for single 1`] = `
<fieldset
  class="euiButtonGroup euiButtonGroup--small euiButtonGroup--text"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons"
  >
    <label
      aria-label="aria-label"
      class="euiButtonGroupButton euiButtonGroupButton--small testClass1 testClass2 css-1m5p0sb-base-text-EuiButtonGroupButton"
      data-test-subj="test subject string"
      for="generated-id"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          <input
            class="euiScreenReaderOnly"
            data-test-subj="button00"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option one
        </span>
      </span>
    </label>
    <label
      class="euiButtonGroupButton euiButtonGroupButton--small  css-1m5p0sb-base-text-EuiButtonGroupButton"
      for="generated-id"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          <input
            class="euiScreenReaderOnly"
            data-test-subj="button01"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option two
        </span>
      </span>
    </label>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--small  css-10kqeyc-base-disabled-EuiButtonGroupButton"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props color accent is rendered for multi 1`] = `
<fieldset
  class="euiButtonGroup euiButtonGroup--small euiButtonGroup--accent"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--small testClass1 testClass2 css-11dmnaa-base-accent-EuiButtonGroupButton"
      data-test-subj="test subject string"
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--small  css-11dmnaa-base-accent-EuiButtonGroupButton"
      data-test-subj="button01"
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--small  css-10kqeyc-base-disabled-EuiButtonGroupButton"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props color accent is rendered for single 1`] = `
<fieldset
  class="euiButtonGroup euiButtonGroup--small euiButtonGroup--accent"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons"
  >
    <label
      aria-label="aria-label"
      class="euiButtonGroupButton euiButtonGroupButton--small testClass1 testClass2 css-11dmnaa-base-accent-EuiButtonGroupButton"
      data-test-subj="test subject string"
      for="generated-id"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          <input
            class="euiScreenReaderOnly"
            data-test-subj="button00"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option one
        </span>
      </span>
    </label>
    <label
      class="euiButtonGroupButton euiButtonGroupButton--small  css-11dmnaa-base-accent-EuiButtonGroupButton"
      for="generated-id"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          <input
            class="euiScreenReaderOnly"
            data-test-subj="button01"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option two
        </span>
      </span>
    </label>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--small  css-10kqeyc-base-disabled-EuiButtonGroupButton"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props color danger is rendered for multi 1`] = `
<fieldset
  class="euiButtonGroup euiButtonGroup--small euiButtonGroup--danger"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--small testClass1 testClass2 css-1old2bv-base-danger-EuiButtonGroupButton"
      data-test-subj="test subject string"
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--small  css-1old2bv-base-danger-EuiButtonGroupButton"
      data-test-subj="button01"
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--small  css-10kqeyc-base-disabled-EuiButtonGroupButton"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props color danger is rendered for single 1`] = `
<fieldset
  class="euiButtonGroup euiButtonGroup--small euiButtonGroup--danger"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons"
  >
    <label
      aria-label="aria-label"
      class="euiButtonGroupButton euiButtonGroupButton--small testClass1 testClass2 css-1old2bv-base-danger-EuiButtonGroupButton"
      data-test-subj="test subject string"
      for="generated-id"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          <input
            class="euiScreenReaderOnly"
            data-test-subj="button00"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option one
        </span>
      </span>
    </label>
    <label
      class="euiButtonGroupButton euiButtonGroupButton--small  css-1old2bv-base-danger-EuiButtonGroupButton"
      for="generated-id"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          <input
            class="euiScreenReaderOnly"
            data-test-subj="button01"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option two
        </span>
      </span>
    </label>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--small  css-10kqeyc-base-disabled-EuiButtonGroupButton"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props color primary is rendered for multi 1`] = `
<fieldset
  class="euiButtonGroup euiButtonGroup--small euiButtonGroup--primary"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--small testClass1 testClass2 css-c1t84v-base-primary-EuiButtonGroupButton"
      data-test-subj="test subject string"
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--small  css-c1t84v-base-primary-EuiButtonGroupButton"
      data-test-subj="button01"
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--small  css-10kqeyc-base-disabled-EuiButtonGroupButton"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props color primary is rendered for single 1`] = `
<fieldset
  class="euiButtonGroup euiButtonGroup--small euiButtonGroup--primary"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons"
  >
    <label
      aria-label="aria-label"
      class="euiButtonGroupButton euiButtonGroupButton--small testClass1 testClass2 css-c1t84v-base-primary-EuiButtonGroupButton"
      data-test-subj="test subject string"
      for="generated-id"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          <input
            class="euiScreenReaderOnly"
            data-test-subj="button00"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option one
        </span>
      </span>
    </label>
    <label
      class="euiButtonGroupButton euiButtonGroupButton--small  css-c1t84v-base-primary-EuiButtonGroupButton"
      for="generated-id"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          <input
            class="euiScreenReaderOnly"
            data-test-subj="button01"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option two
        </span>
      </span>
    </label>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--small  css-10kqeyc-base-disabled-EuiButtonGroupButton"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props color success is rendered for multi 1`] = `
<fieldset
  class="euiButtonGroup euiButtonGroup--small euiButtonGroup--success"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--small testClass1 testClass2 css-vufpcj-base-success-EuiButtonGroupButton"
      data-test-subj="test subject string"
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--small  css-vufpcj-base-success-EuiButtonGroupButton"
      data-test-subj="button01"
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--small  css-10kqeyc-base-disabled-EuiButtonGroupButton"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props color success is rendered for single 1`] = `
<fieldset
  class="euiButtonGroup euiButtonGroup--small euiButtonGroup--success"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons"
  >
    <label
      aria-label="aria-label"
      class="euiButtonGroupButton euiButtonGroupButton--small testClass1 testClass2 css-vufpcj-base-success-EuiButtonGroupButton"
      data-test-subj="test subject string"
      for="generated-id"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          <input
            class="euiScreenReaderOnly"
            data-test-subj="button00"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option one
        </span>
      </span>
    </label>
    <label
      class="euiButtonGroupButton euiButtonGroupButton--small  css-vufpcj-base-success-EuiButtonGroupButton"
      for="generated-id"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          <input
            class="euiScreenReaderOnly"
            data-test-subj="button01"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option two
        </span>
      </span>
    </label>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--small  css-10kqeyc-base-disabled-EuiButtonGroupButton"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props color text is rendered for multi 1`] = `
<fieldset
  class="euiButtonGroup euiButtonGroup--small euiButtonGroup--text"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--small testClass1 testClass2 css-1m5p0sb-base-text-EuiButtonGroupButton"
      data-test-subj="test subject string"
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--small  css-1m5p0sb-base-text-EuiButtonGroupButton"
      data-test-subj="button01"
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--small  css-10kqeyc-base-disabled-EuiButtonGroupButton"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props color text is rendered for single 1`] = `
<fieldset
  class="euiButtonGroup euiButtonGroup--small euiButtonGroup--text"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons"
  >
    <label
      aria-label="aria-label"
      class="euiButtonGroupButton euiButtonGroupButton--small testClass1 testClass2 css-1m5p0sb-base-text-EuiButtonGroupButton"
      data-test-subj="test subject string"
      for="generated-id"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          <input
            class="euiScreenReaderOnly"
            data-test-subj="button00"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option one
        </span>
      </span>
    </label>
    <label
      class="euiButtonGroupButton euiButtonGroupButton--small  css-1m5p0sb-base-text-EuiButtonGroupButton"
      for="generated-id"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          <input
            class="euiScreenReaderOnly"
            data-test-subj="button01"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option two
        </span>
      </span>
    </label>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--small  css-10kqeyc-base-disabled-EuiButtonGroupButton"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props color warning is rendered for multi 1`] = `
<fieldset
  class="euiButtonGroup euiButtonGroup--small euiButtonGroup--warning"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--small testClass1 testClass2 css-fhqo9b-base-warning-EuiButtonGroupButton"
      data-test-subj="test subject string"
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--small  css-fhqo9b-base-warning-EuiButtonGroupButton"
      data-test-subj="button01"
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--small  css-10kqeyc-base-disabled-EuiButtonGroupButton"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props color warning is rendered for single 1`] = `
<fieldset
  class="euiButtonGroup euiButtonGroup--small euiButtonGroup--warning"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons"
  >
    <label
      aria-label="aria-label"
      class="euiButtonGroupButton euiButtonGroupButton--small testClass1 testClass2 css-fhqo9b-base-warning-EuiButtonGroupButton"
      data-test-subj="test subject string"
      for="generated-id"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          <input
            class="euiScreenReaderOnly"
            data-test-subj="button00"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option one
        </span>
      </span>
    </label>
    <label
      class="euiButtonGroupButton euiButtonGroupButton--small  css-fhqo9b-base-warning-EuiButtonGroupButton"
      for="generated-id"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          <input
            class="euiScreenReaderOnly"
            data-test-subj="button01"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option two
        </span>
      </span>
    </label>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--small  css-10kqeyc-base-disabled-EuiButtonGroupButton"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props isDisabled is rendered for multi 1`] = `
<fieldset
  class="euiButtonGroup euiButtonGroup--small euiButtonGroup--text euiButtonGroup--isDisabled"
  disabled=""
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--small testClass1 testClass2 css-10kqeyc-base-disabled-EuiButtonGroupButton"
      data-test-subj="test subject string"
      disabled=""
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--small  css-10kqeyc-base-disabled-EuiButtonGroupButton"
      data-test-subj="button01"
      disabled=""
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--small  css-10kqeyc-base-disabled-EuiButtonGroupButton"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props isDisabled is rendered for single 1`] = `
<fieldset
  class="euiButtonGroup euiButtonGroup--small euiButtonGroup--text euiButtonGroup--isDisabled"
  disabled=""
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--small testClass1 testClass2 css-10kqeyc-base-disabled-EuiButtonGroupButton"
      data-test-subj="test subject string"
      disabled=""
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--small  css-10kqeyc-base-disabled-EuiButtonGroupButton"
      data-test-subj="button01"
      disabled=""
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--small  css-10kqeyc-base-disabled-EuiButtonGroupButton"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props isFullWidth is rendered for multi 1`] = `
<fieldset
  class="euiButtonGroup euiButtonGroup--small euiButtonGroup--text euiButtonGroup--fullWidth"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--small testClass1 testClass2 css-1m5p0sb-base-text-EuiButtonGroupButton"
      data-test-subj="test subject string"
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--small  css-1m5p0sb-base-text-EuiButtonGroupButton"
      data-test-subj="button01"
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--small  css-10kqeyc-base-disabled-EuiButtonGroupButton"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props isFullWidth is rendered for single 1`] = `
<fieldset
  class="euiButtonGroup euiButtonGroup--small euiButtonGroup--text euiButtonGroup--fullWidth"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons"
  >
    <label
      aria-label="aria-label"
      class="euiButtonGroupButton euiButtonGroupButton--small testClass1 testClass2 css-1m5p0sb-base-text-EuiButtonGroupButton"
      data-test-subj="test subject string"
      for="generated-id"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          <input
            class="euiScreenReaderOnly"
            data-test-subj="button00"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option one
        </span>
      </span>
    </label>
    <label
      class="euiButtonGroupButton euiButtonGroupButton--small  css-1m5p0sb-base-text-EuiButtonGroupButton"
      for="generated-id"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          <input
            class="euiScreenReaderOnly"
            data-test-subj="button01"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option two
        </span>
      </span>
    </label>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--small  css-10kqeyc-base-disabled-EuiButtonGroupButton"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props isIconOnly is rendered for multi 1`] = `
<fieldset
  class="euiButtonGroup euiButtonGroup--small euiButtonGroup--text"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--small euiButtonGroupButton-isIconOnly testClass1 testClass2 css-1m5p0sb-base-text-EuiButtonGroupButton"
      data-test-subj="test subject string"
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiScreenReaderOnly"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--small euiButtonGroupButton-isIconOnly css-1m5p0sb-base-text-EuiButtonGroupButton"
      data-test-subj="button01"
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiScreenReaderOnly"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--small euiButtonGroupButton-isIconOnly css-10kqeyc-base-disabled-EuiButtonGroupButton"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiScreenReaderOnly"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props isIconOnly is rendered for single 1`] = `
<fieldset
  class="euiButtonGroup euiButtonGroup--small euiButtonGroup--text"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons"
  >
    <label
      aria-label="aria-label"
      class="euiButtonGroupButton euiButtonGroupButton--small euiButtonGroupButton-isIconOnly testClass1 testClass2 css-1m5p0sb-base-text-EuiButtonGroupButton"
      data-test-subj="test subject string"
      for="generated-id"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiScreenReaderOnly"
        >
          <input
            class="euiScreenReaderOnly"
            data-test-subj="button00"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option one
        </span>
      </span>
    </label>
    <label
      class="euiButtonGroupButton euiButtonGroupButton--small euiButtonGroupButton-isIconOnly css-1m5p0sb-base-text-EuiButtonGroupButton"
      for="generated-id"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiScreenReaderOnly"
        >
          <input
            class="euiScreenReaderOnly"
            data-test-subj="button01"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option two
        </span>
      </span>
    </label>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--small euiButtonGroupButton-isIconOnly css-10kqeyc-base-disabled-EuiButtonGroupButton"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiScreenReaderOnly"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props selection idSelected is rendered for single 1`] = `
<fieldset
  class="euiButtonGroup euiButtonGroup--small euiButtonGroup--text"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons"
  >
    <label
      aria-label="aria-label"
      class="euiButtonGroupButton euiButtonGroupButton--small euiButtonGroupButton-isSelected testClass1 testClass2 css-qmwmig-fill-text-EuiButtonGroupButton"
      data-test-subj="test subject string"
      for="generated-id"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          <input
            checked=""
            class="euiScreenReaderOnly"
            data-test-subj="button00"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option one
        </span>
      </span>
    </label>
    <label
      class="euiButtonGroupButton euiButtonGroupButton--small  css-1m5p0sb-base-text-EuiButtonGroupButton"
      for="generated-id"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          <input
            class="euiScreenReaderOnly"
            data-test-subj="button01"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option two
        </span>
      </span>
    </label>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--small  css-10kqeyc-base-disabled-EuiButtonGroupButton"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props selection idToSelectedMap is rendered for multi 1`] = `
<fieldset
  class="euiButtonGroup euiButtonGroup--small euiButtonGroup--text"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons"
  >
    <button
      aria-label="aria-label"
      aria-pressed="true"
      class="euiButtonGroupButton euiButtonGroupButton--small euiButtonGroupButton-isSelected testClass1 testClass2 css-qmwmig-fill-text-EuiButtonGroupButton"
      data-test-subj="test subject string"
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="true"
      class="euiButtonGroupButton euiButtonGroupButton--small euiButtonGroupButton-isSelected css-qmwmig-fill-text-EuiButtonGroupButton"
      data-test-subj="button01"
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--small  css-10kqeyc-base-disabled-EuiButtonGroupButton"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup type multi is rendered 1`] = `
<fieldset
  aria-label="aria-label"
  class="euiButtonGroup euiButtonGroup--small euiButtonGroup--text testClass1 testClass2"
  data-test-subj="test subject string"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--small testClass1 testClass2 css-1m5p0sb-base-text-EuiButtonGroupButton"
      data-test-subj="test subject string"
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--small  css-1m5p0sb-base-text-EuiButtonGroupButton"
      data-test-subj="button01"
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--small  css-10kqeyc-base-disabled-EuiButtonGroupButton"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup type single is rendered 1`] = `
<fieldset
  aria-label="aria-label"
  class="euiButtonGroup euiButtonGroup--small euiButtonGroup--text testClass1 testClass2"
  data-test-subj="test subject string"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons"
  >
    <label
      aria-label="aria-label"
      class="euiButtonGroupButton euiButtonGroupButton--small testClass1 testClass2 css-1m5p0sb-base-text-EuiButtonGroupButton"
      data-test-subj="test subject string"
      for="generated-id"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          <input
            class="euiScreenReaderOnly"
            data-test-subj="button00"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option one
        </span>
      </span>
    </label>
    <label
      class="euiButtonGroupButton euiButtonGroupButton--small  css-1m5p0sb-base-text-EuiButtonGroupButton"
      for="generated-id"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          <input
            class="euiScreenReaderOnly"
            data-test-subj="button01"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option two
        </span>
      </span>
    </label>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--small  css-10kqeyc-base-disabled-EuiButtonGroupButton"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;
